# did-wba-example

./: .env.example  .gitignore  FAQ.md  LICENSE  MCP_README.md  README.md  README_EN.md  README_MCP.md  anp-llmapp.py  anp_llm.py  anp_llmagent.py  anp_llmapp.py  anp_llmapp_web.py  chat_history.json  did_server.py  freshguide.md  mcp_client.py  mcp_client_example.py  mcp_config_readme.md  mcp_install_readme.md  mcp_server.py  mcp_sse_client.py  mcp_sse_server.py  mcp_stdio_client.py  mcp_stdio_server.py  pyproject.toml  setup_mcp.py  test.py  todo.md  web_anp_llmagent_launcher.py  web_anp_llmapp.py  web_api.py
anp_core/agent/: anp_llm_adapter.py  anp_tool.py  anp_tool_test.py
anp_core/anp_agents/: common.js  weatherall.js  weatherbj.js  哈哈哈.js
anp_core/anp_bookmark/: weatherall.js  weatherbj.js
anp_core/auth/: auth_middleware.py  custom_did_resolver.py  did_auth.py  token_auth.py
anp_core/client/: client.py
anp_core/discover/: anp_tool.py  anp_tool_test.py
anp_core/server/: server.py
anp_mcpwrapper/: mcp_sse_client.py  mcp_sse_server.py  mcp_stdio_client.py  mcp_stdio_server.py
api/: ad_router.py  anp_nlp_router.py  auth_router.py  chat_router.py  did_router.py
auth/: auth_middleware.py  did_auth.py  token_auth.py
core/: app.py  config.py
did_core/auth/: auth_middleware.py  did_auth.py  jwt_keys.py  token_auth.py
did_core/client/: client.py
did_core/server/: server.py
mcpwrapper/: mcp_sse_client.py  mcp_sse_server.py  mcp_stdio_client.py  mcp_stdio_server.py
setup/: setup_mcp.py
static/: index.html
utils/: log_base.py
(+23 files in other folders)
